Endpoint to find  available rooms with checkin and checkout dates
